Parser_Lexer/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    TRUE
    DOT
    STRING
    ELSEIF
    MAIN
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID SEMICOLON prs1 prs2 block
Rule 2     prs1 -> vars
Rule 3     prs1 -> empty
Rule 4     prs2 -> function prs2
Rule 5     prs2 -> empty
Rule 6     vars -> VAR vas1 COLON type SEMICOLON vas1
Rule 7     vas1 -> ID
Rule 8     vas1 -> ID COMA vas1
Rule 9     vas1 -> empty
Rule 10    type -> INT_TYPE
Rule 11    type -> FLOAT_TYPE
Rule 12    type -> BOOL_TYPE
Rule 13    type -> STRING_TYPE
Rule 14    type -> array
Rule 15    array -> INT_TYPE ars1
Rule 16    array -> FLOAT_TYPE ars1
Rule 17    array -> STRING_TYPE ars1
Rule 18    ars1 -> LARRAY CTEI RARRAY
Rule 19    block -> LBRACKET bls1 RBRACKET
Rule 20    bls1 -> statue bls1
Rule 21    bls1 -> empty
Rule 22    statue -> assignment
Rule 23    statue -> condition
Rule 24    statue -> read
Rule 25    statue -> write
Rule 26    statue -> cycle
Rule 27    statue -> functioncall
Rule 28    statue -> predefined
Rule 29    statue -> return
Rule 30    parameter -> empty
Rule 31    parameter -> pas1
Rule 32    pas1 -> type ID
Rule 33    pas1 -> type ID COMA pas1
Rule 34    return -> RETURN ssexpression SEMICOLON
Rule 35    assignment -> ID ass1 ASSIGN ass2
Rule 36    ass1 -> empty
Rule 37    ass1 -> LARRAY ssexpression RARRAY
Rule 38    ass2 -> functioncall
Rule 39    ass2 -> ssexpression
Rule 40    ssexpression -> sexpression
Rule 41    ssexpression -> NOT sexpression
Rule 42    sexpression -> expression ses1
Rule 43    ses1 -> empty
Rule 44    ses1 -> AND sexpression
Rule 45    ses1 -> OR sexpression
Rule 46    expression -> exp exs1
Rule 47    exs1 -> empty
Rule 48    exs1 -> GT exp
Rule 49    exs1 -> LT exp
Rule 50    exs1 -> GE exp
Rule 51    exs1 -> LE exp
Rule 52    exs1 -> EQUAL exp
Rule 53    exs1 -> DIFFERENT exp
Rule 54    term -> factor tes1
Rule 55    tes1 -> empty
Rule 56    tes1 -> TIMES term
Rule 57    tes1 -> DIVISION term
Rule 58    exp -> term exps1
Rule 59    exps1 -> empty
Rule 60    exps1 -> PLUS term
Rule 61    exps1 -> MINUS term
Rule 62    predefined -> drawcircle
Rule 63    predefined -> drawsquare
Rule 64    predefined -> drawtriangle
Rule 65    predefined -> drawline
Rule 66    predefined -> drawpolygon
Rule 67    predefined -> drawcurve
Rule 68    condition -> IF cos1 RPAREN block cos3
Rule 69    cos1 -> LPAREN cos2
Rule 70    cos1 -> NOT cos2
Rule 71    cos2 -> ssexpression
Rule 72    cos2 -> functioncall
Rule 73    cos3 -> ELSE block
Rule 74    cos3 -> empty
Rule 75    read -> ID ASSIGN INPUT SEMICOLON
Rule 76    write -> PRINT LPAREN ssexpression RPAREN
Rule 77    color -> RED
Rule 78    color -> GREEN
Rule 79    color -> BLUE
Rule 80    color -> YELLOW
Rule 81    color -> BROWN
Rule 82    color -> BLACK
Rule 83    cycle -> WHILE LPAREN ssexpression RPAREN block
Rule 84    function -> FUNC fus1 ID LPAREN parameter RPAREN block
Rule 85    fus1 -> VOID
Rule 86    fus1 -> type
Rule 87    functioncall -> ID LPAREN fcs1 RPAREN SEMICOLON
Rule 88    fcs1 -> empty
Rule 89    fcs1 -> ssexpression
Rule 90    fcs1 -> ssexpression COMA fcs1
Rule 91    drawline -> DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 92    drawsquare -> DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 93    drawcircle -> DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 94    drawtriangle -> DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 95    drawcurve -> DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON
Rule 96    drawpolygon -> DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 97    factor -> LPAREN ssexpression RPAREN
Rule 98    factor -> PLUS fas1
Rule 99    factor -> MINUS fas1
Rule 100   fas1 -> ID fas2
Rule 101   fas1 -> CTEI
Rule 102   fas1 -> CTEF
Rule 103   fas2 -> LARRAY exp RARRAY
Rule 104   fas2 -> LPAREN exp RPAREN
Rule 105   fas2 -> empty
Rule 106   empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 35 75
BLACK                : 82
BLUE                 : 79
BOOL_TYPE            : 12
BROWN                : 81
COLON                : 6
COMA                 : 8 33 90 91 91 91 91 92 92 93 93 94 94 95 96 96
CONST                : 
CTEF                 : 102
CTEI                 : 18 101
DIFFERENT            : 53
DIVISION             : 57
DOT                  : 
DRAWCIRCLE           : 93
DRAWCURVE            : 95
DRAWLINE             : 91
DRAWPOLYGON          : 96
DRAWSQUARE           : 92
DRAWTRIANGLE         : 94
ELSE                 : 73
ELSEIF               : 
EQUAL                : 52
FALSE                : 
FLOAT_TYPE           : 11 16
FUNC                 : 84
GE                   : 50
GREEN                : 78
GT                   : 48
ID                   : 1 7 8 32 33 35 75 84 87 100
IF                   : 68
INPUT                : 75
INT_TYPE             : 10 15
LARRAY               : 18 37 103
LBRACKET             : 19
LE                   : 51
LPAREN               : 69 76 83 84 87 91 92 93 94 95 96 97 104
LT                   : 49
MAIN                 : 
MINUS                : 61 99
NOT                  : 41 70
OR                   : 45
PLUS                 : 60 98
PRINT                : 76
PROGRAMA             : 1
RARRAY               : 18 37 103
RBRACKET             : 19
RED                  : 77
RETURN               : 34
RPAREN               : 68 76 83 84 87 91 92 93 94 95 96 97 104
SEMICOLON            : 1 6 34 75 87 91 92 93 94 95 96
STRING               : 
STRING_TYPE          : 13 17
TIMES                : 56
TRUE                 : 
VAR                  : 6
VOID                 : 85
WHILE                : 83
YELLOW               : 80
error                : 

Nonterminals, with rules where they appear

array                : 14
ars1                 : 15 16 17
ass1                 : 35
ass2                 : 35
assignment           : 22
block                : 1 68 73 83 84
bls1                 : 19 20
color                : 91 92 93 94 95 96
condition            : 23
cos1                 : 68
cos2                 : 69 70
cos3                 : 68
cycle                : 26
drawcircle           : 62
drawcurve            : 67
drawline             : 65
drawpolygon          : 66
drawsquare           : 63
drawtriangle         : 64
empty                : 3 5 9 21 30 36 43 47 55 59 74 88 105
exp                  : 46 48 49 50 51 52 53 103 104
expression           : 42
exps1                : 58
exs1                 : 46
factor               : 54
fas1                 : 98 99
fas2                 : 100
fcs1                 : 87 90
function             : 4
functioncall         : 27 38 72
fus1                 : 84
parameter            : 84
pas1                 : 31 33
predefined           : 28
program              : 0
prs1                 : 1
prs2                 : 1 4
read                 : 24
return               : 29
ses1                 : 42
sexpression          : 40 41 44 45
ssexpression         : 34 37 39 71 76 83 89 90 91 91 91 91 92 92 93 93 94 94 95 96 96 97
statue               : 20
term                 : 56 57 58 60 61
tes1                 : 54
type                 : 6 32 33 86
vars                 : 2
vas1                 : 6 6 8
write                : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID SEMICOLON prs1 prs2 block

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID SEMICOLON prs1 prs2 block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . SEMICOLON prs1 prs2 block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAMA ID SEMICOLON . prs1 prs2 block
    (2) prs1 -> . vars
    (3) prs1 -> . empty
    (6) vars -> . VAR vas1 COLON type SEMICOLON vas1
    (106) empty -> .

    VAR             shift and go to state 8
    FUNC            reduce using rule 106 (empty -> .)
    LBRACKET        reduce using rule 106 (empty -> .)

    vars                           shift and go to state 5
    prs1                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (2) prs1 -> vars .

    FUNC            reduce using rule 2 (prs1 -> vars .)
    LBRACKET        reduce using rule 2 (prs1 -> vars .)


state 6

    (1) program -> PROGRAMA ID SEMICOLON prs1 . prs2 block
    (4) prs2 -> . function prs2
    (5) prs2 -> . empty
    (84) function -> . FUNC fus1 ID LPAREN parameter RPAREN block
    (106) empty -> .

    FUNC            shift and go to state 12
    LBRACKET        reduce using rule 106 (empty -> .)

    function                       shift and go to state 9
    prs2                           shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) prs1 -> empty .

    FUNC            reduce using rule 3 (prs1 -> empty .)
    LBRACKET        reduce using rule 3 (prs1 -> empty .)


state 8

    (6) vars -> VAR . vas1 COLON type SEMICOLON vas1
    (7) vas1 -> . ID
    (8) vas1 -> . ID COMA vas1
    (9) vas1 -> . empty
    (106) empty -> .

    ID              shift and go to state 14
    COLON           reduce using rule 106 (empty -> .)

    vas1                           shift and go to state 13
    empty                          shift and go to state 15

state 9

    (4) prs2 -> function . prs2
    (4) prs2 -> . function prs2
    (5) prs2 -> . empty
    (84) function -> . FUNC fus1 ID LPAREN parameter RPAREN block
    (106) empty -> .

    FUNC            shift and go to state 12
    LBRACKET        reduce using rule 106 (empty -> .)

    function                       shift and go to state 9
    prs2                           shift and go to state 16
    empty                          shift and go to state 11

state 10

    (1) program -> PROGRAMA ID SEMICOLON prs1 prs2 . block
    (19) block -> . LBRACKET bls1 RBRACKET

    LBRACKET        shift and go to state 17

    block                          shift and go to state 18

state 11

    (5) prs2 -> empty .

    LBRACKET        reduce using rule 5 (prs2 -> empty .)


state 12

    (84) function -> FUNC . fus1 ID LPAREN parameter RPAREN block
    (85) fus1 -> . VOID
    (86) fus1 -> . type
    (10) type -> . INT_TYPE
    (11) type -> . FLOAT_TYPE
    (12) type -> . BOOL_TYPE
    (13) type -> . STRING_TYPE
    (14) type -> . array
    (15) array -> . INT_TYPE ars1
    (16) array -> . FLOAT_TYPE ars1
    (17) array -> . STRING_TYPE ars1

    VOID            shift and go to state 21
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 22
    BOOL_TYPE       shift and go to state 24
    STRING_TYPE     shift and go to state 23

    fus1                           shift and go to state 19
    array                          shift and go to state 26
    type                           shift and go to state 20

state 13

    (6) vars -> VAR vas1 . COLON type SEMICOLON vas1

    COLON           shift and go to state 27


state 14

    (7) vas1 -> ID .
    (8) vas1 -> ID . COMA vas1

    COLON           reduce using rule 7 (vas1 -> ID .)
    FUNC            reduce using rule 7 (vas1 -> ID .)
    LBRACKET        reduce using rule 7 (vas1 -> ID .)
    COMA            shift and go to state 28


state 15

    (9) vas1 -> empty .

    COLON           reduce using rule 9 (vas1 -> empty .)
    FUNC            reduce using rule 9 (vas1 -> empty .)
    LBRACKET        reduce using rule 9 (vas1 -> empty .)


state 16

    (4) prs2 -> function prs2 .

    LBRACKET        reduce using rule 4 (prs2 -> function prs2 .)


state 17

    (19) block -> LBRACKET . bls1 RBRACKET
    (20) bls1 -> . statue bls1
    (21) bls1 -> . empty
    (22) statue -> . assignment
    (23) statue -> . condition
    (24) statue -> . read
    (25) statue -> . write
    (26) statue -> . cycle
    (27) statue -> . functioncall
    (28) statue -> . predefined
    (29) statue -> . return
    (106) empty -> .
    (35) assignment -> . ID ass1 ASSIGN ass2
    (68) condition -> . IF cos1 RPAREN block cos3
    (75) read -> . ID ASSIGN INPUT SEMICOLON
    (76) write -> . PRINT LPAREN ssexpression RPAREN
    (83) cycle -> . WHILE LPAREN ssexpression RPAREN block
    (87) functioncall -> . ID LPAREN fcs1 RPAREN SEMICOLON
    (62) predefined -> . drawcircle
    (63) predefined -> . drawsquare
    (64) predefined -> . drawtriangle
    (65) predefined -> . drawline
    (66) predefined -> . drawpolygon
    (67) predefined -> . drawcurve
    (34) return -> . RETURN ssexpression SEMICOLON
    (93) drawcircle -> . DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (92) drawsquare -> . DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (94) drawtriangle -> . DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (91) drawline -> . DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (96) drawpolygon -> . DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (95) drawcurve -> . DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON

    RBRACKET        reduce using rule 106 (empty -> .)
    ID              shift and go to state 49
    IF              shift and go to state 51
    PRINT           shift and go to state 35
    WHILE           shift and go to state 34
    RETURN          shift and go to state 30
    DRAWCIRCLE      shift and go to state 37
    DRAWSQUARE      shift and go to state 40
    DRAWTRIANGLE    shift and go to state 32
    DRAWLINE        shift and go to state 48
    DRAWPOLYGON     shift and go to state 52
    DRAWCURVE       shift and go to state 53

    drawtriangle                   shift and go to state 29
    statue                         shift and go to state 31
    drawcurve                      shift and go to state 33
    predefined                     shift and go to state 36
    drawline                       shift and go to state 38
    write                          shift and go to state 39
    functioncall                   shift and go to state 56
    empty                          shift and go to state 43
    return                         shift and go to state 44
    drawpolygon                    shift and go to state 45
    read                           shift and go to state 46
    assignment                     shift and go to state 47
    condition                      shift and go to state 50
    cycle                          shift and go to state 42
    drawsquare                     shift and go to state 54
    bls1                           shift and go to state 55
    drawcircle                     shift and go to state 41

state 18

    (1) program -> PROGRAMA ID SEMICOLON prs1 prs2 block .

    $end            reduce using rule 1 (program -> PROGRAMA ID SEMICOLON prs1 prs2 block .)


state 19

    (84) function -> FUNC fus1 . ID LPAREN parameter RPAREN block

    ID              shift and go to state 57


state 20

    (86) fus1 -> type .

    ID              reduce using rule 86 (fus1 -> type .)


state 21

    (85) fus1 -> VOID .

    ID              reduce using rule 85 (fus1 -> VOID .)


state 22

    (11) type -> FLOAT_TYPE .
    (16) array -> FLOAT_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 11 (type -> FLOAT_TYPE .)
    SEMICOLON       reduce using rule 11 (type -> FLOAT_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 59

state 23

    (13) type -> STRING_TYPE .
    (17) array -> STRING_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 13 (type -> STRING_TYPE .)
    SEMICOLON       reduce using rule 13 (type -> STRING_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 60

state 24

    (12) type -> BOOL_TYPE .

    ID              reduce using rule 12 (type -> BOOL_TYPE .)
    SEMICOLON       reduce using rule 12 (type -> BOOL_TYPE .)


state 25

    (10) type -> INT_TYPE .
    (15) array -> INT_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 10 (type -> INT_TYPE .)
    SEMICOLON       reduce using rule 10 (type -> INT_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 61

state 26

    (14) type -> array .

    ID              reduce using rule 14 (type -> array .)
    SEMICOLON       reduce using rule 14 (type -> array .)


state 27

    (6) vars -> VAR vas1 COLON . type SEMICOLON vas1
    (10) type -> . INT_TYPE
    (11) type -> . FLOAT_TYPE
    (12) type -> . BOOL_TYPE
    (13) type -> . STRING_TYPE
    (14) type -> . array
    (15) array -> . INT_TYPE ars1
    (16) array -> . FLOAT_TYPE ars1
    (17) array -> . STRING_TYPE ars1

    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 22
    BOOL_TYPE       shift and go to state 24
    STRING_TYPE     shift and go to state 23

    array                          shift and go to state 26
    type                           shift and go to state 62

state 28

    (8) vas1 -> ID COMA . vas1
    (7) vas1 -> . ID
    (8) vas1 -> . ID COMA vas1
    (9) vas1 -> . empty
    (106) empty -> .

    ID              shift and go to state 14
    COLON           reduce using rule 106 (empty -> .)
    FUNC            reduce using rule 106 (empty -> .)
    LBRACKET        reduce using rule 106 (empty -> .)

    vas1                           shift and go to state 63
    empty                          shift and go to state 15

state 29

    (64) predefined -> drawtriangle .

    ID              reduce using rule 64 (predefined -> drawtriangle .)
    IF              reduce using rule 64 (predefined -> drawtriangle .)
    PRINT           reduce using rule 64 (predefined -> drawtriangle .)
    WHILE           reduce using rule 64 (predefined -> drawtriangle .)
    RETURN          reduce using rule 64 (predefined -> drawtriangle .)
    DRAWCIRCLE      reduce using rule 64 (predefined -> drawtriangle .)
    DRAWSQUARE      reduce using rule 64 (predefined -> drawtriangle .)
    DRAWTRIANGLE    reduce using rule 64 (predefined -> drawtriangle .)
    DRAWLINE        reduce using rule 64 (predefined -> drawtriangle .)
    DRAWPOLYGON     reduce using rule 64 (predefined -> drawtriangle .)
    DRAWCURVE       reduce using rule 64 (predefined -> drawtriangle .)
    RBRACKET        reduce using rule 64 (predefined -> drawtriangle .)


state 30

    (34) return -> RETURN . ssexpression SEMICOLON
    (40) ssexpression -> . sexpression
    (41) ssexpression -> . NOT sexpression
    (42) sexpression -> . expression ses1
    (46) expression -> . exp exs1
    (58) exp -> . term exps1
    (54) term -> . factor tes1
    (97) factor -> . LPAREN ssexpression RPAREN
    (98) factor -> . PLUS fas1
    (99) factor -> . MINUS fas1

    NOT             shift and go to state 69
    LPAREN          shift and go to state 65
    PLUS            shift and go to state 70
    MINUS           shift and go to state 68

    term                           shift and go to state 64
    factor                         shift and go to state 66
    sexpression                    shift and go to state 67
    exp                            shift and go to state 71
    ssexpression                   shift and go to state 72
    expression                     shift and go to state 73

state 31

    (20) bls1 -> statue . bls1
    (20) bls1 -> . statue bls1
    (21) bls1 -> . empty
    (22) statue -> . assignment
    (23) statue -> . condition
    (24) statue -> . read
    (25) statue -> . write
    (26) statue -> . cycle
    (27) statue -> . functioncall
    (28) statue -> . predefined
    (29) statue -> . return
    (106) empty -> .
    (35) assignment -> . ID ass1 ASSIGN ass2
    (68) condition -> . IF cos1 RPAREN block cos3
    (75) read -> . ID ASSIGN INPUT SEMICOLON
    (76) write -> . PRINT LPAREN ssexpression RPAREN
    (83) cycle -> . WHILE LPAREN ssexpression RPAREN block
    (87) functioncall -> . ID LPAREN fcs1 RPAREN SEMICOLON
    (62) predefined -> . drawcircle
    (63) predefined -> . drawsquare
    (64) predefined -> . drawtriangle
    (65) predefined -> . drawline
    (66) predefined -> . drawpolygon
    (67) predefined -> . drawcurve
    (34) return -> . RETURN ssexpression SEMICOLON
    (93) drawcircle -> . DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (92) drawsquare -> . DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (94) drawtriangle -> . DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (91) drawline -> . DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (96) drawpolygon -> . DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (95) drawcurve -> . DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON

    RBRACKET        reduce using rule 106 (empty -> .)
    ID              shift and go to state 49
    IF              shift and go to state 51
    PRINT           shift and go to state 35
    WHILE           shift and go to state 34
    RETURN          shift and go to state 30
    DRAWCIRCLE      shift and go to state 37
    DRAWSQUARE      shift and go to state 40
    DRAWTRIANGLE    shift and go to state 32
    DRAWLINE        shift and go to state 48
    DRAWPOLYGON     shift and go to state 52
    DRAWCURVE       shift and go to state 53

    drawtriangle                   shift and go to state 29
    statue                         shift and go to state 31
    drawcurve                      shift and go to state 33
    predefined                     shift and go to state 36
    drawline                       shift and go to state 38
    write                          shift and go to state 39
    functioncall                   shift and go to state 56
    empty                          shift and go to state 43
    return                         shift and go to state 44
    drawpolygon                    shift and go to state 45
    read                           shift and go to state 46
    assignment                     shift and go to state 47
    condition                      shift and go to state 50
    cycle                          shift and go to state 42
    drawsquare                     shift and go to state 54
    bls1                           shift and go to state 74
    drawcircle                     shift and go to state 41

state 32

    (94) drawtriangle -> DRAWTRIANGLE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 75


state 33

    (67) predefined -> drawcurve .

    ID              reduce using rule 67 (predefined -> drawcurve .)
    IF              reduce using rule 67 (predefined -> drawcurve .)
    PRINT           reduce using rule 67 (predefined -> drawcurve .)
    WHILE           reduce using rule 67 (predefined -> drawcurve .)
    RETURN          reduce using rule 67 (predefined -> drawcurve .)
    DRAWCIRCLE      reduce using rule 67 (predefined -> drawcurve .)
    DRAWSQUARE      reduce using rule 67 (predefined -> drawcurve .)
    DRAWTRIANGLE    reduce using rule 67 (predefined -> drawcurve .)
    DRAWLINE        reduce using rule 67 (predefined -> drawcurve .)
    DRAWPOLYGON     reduce using rule 67 (predefined -> drawcurve .)
    DRAWCURVE       reduce using rule 67 (predefined -> drawcurve .)
    RBRACKET        reduce using rule 67 (predefined -> drawcurve .)


state 34

    (83) cycle -> WHILE . LPAREN ssexpression RPAREN block

    LPAREN          shift and go to state 76


state 35

    (76) write -> PRINT . LPAREN ssexpression RPAREN

    LPAREN          shift and go to state 77


state 36

    (28) statue -> predefined .

    ID              reduce using rule 28 (statue -> predefined .)
    IF              reduce using rule 28 (statue -> predefined .)
    PRINT           reduce using rule 28 (statue -> predefined .)
    WHILE           reduce using rule 28 (statue -> predefined .)
    RETURN          reduce using rule 28 (statue -> predefined .)
    DRAWCIRCLE      reduce using rule 28 (statue -> predefined .)
    DRAWSQUARE      reduce using rule 28 (statue -> predefined .)
    DRAWTRIANGLE    reduce using rule 28 (statue -> predefined .)
    DRAWLINE        reduce using rule 28 (statue -> predefined .)
    DRAWPOLYGON     reduce using rule 28 (statue -> predefined .)
    DRAWCURVE       reduce using rule 28 (statue -> predefined .)
    RBRACKET        reduce using rule 28 (statue -> predefined .)


state 37

    (93) drawcircle -> DRAWCIRCLE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 78


state 38

    (65) predefined -> drawline .

    ID              reduce using rule 65 (predefined -> drawline .)
    IF              reduce using rule 65 (predefined -> drawline .)
    PRINT           reduce using rule 65 (predefined -> drawline .)
    WHILE           reduce using rule 65 (predefined -> drawline .)
    RETURN          reduce using rule 65 (predefined -> drawline .)
    DRAWCIRCLE      reduce using rule 65 (predefined -> drawline .)
    DRAWSQUARE      reduce using rule 65 (predefined -> drawline .)
    DRAWTRIANGLE    reduce using rule 65 (predefined -> drawline .)
    DRAWLINE        reduce using rule 65 (predefined -> drawline .)
    DRAWPOLYGON     reduce using rule 65 (predefined -> drawline .)
    DRAWCURVE       reduce using rule 65 (predefined -> drawline .)
    RBRACKET        reduce using rule 65 (predefined -> drawline .)


state 39

    (25) statue -> write .

    ID              reduce using rule 25 (statue -> write .)
    IF              reduce using rule 25 (statue -> write .)
    PRINT           reduce using rule 25 (statue -> write .)
    WHILE           reduce using rule 25 (statue -> write .)
    RETURN          reduce using rule 25 (statue -> write .)
    DRAWCIRCLE      reduce using rule 25 (statue -> write .)
    DRAWSQUARE      reduce using rule 25 (statue -> write .)
    DRAWTRIANGLE    reduce using rule 25 (statue -> write .)
    DRAWLINE        reduce using rule 25 (statue -> write .)
    DRAWPOLYGON     reduce using rule 25 (statue -> write .)
    DRAWCURVE       reduce using rule 25 (statue -> write .)
    RBRACKET        reduce using rule 25 (statue -> write .)


state 40

    (92) drawsquare -> DRAWSQUARE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 79


state 41

    (62) predefined -> drawcircle .
